fix new project button spacing and size

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ section.user-page-module {
 }
 
 #start-new-button {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 div.whole-comment {
